infrastructure/k8s/groceryspend/predict.yml
# One file for deploying the prediction app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  # run within the app namespace
  name: prediction
  namespace: app
  labels:
    app: prediction
spec:
  replicas: 1 # only run one
  selector:
    matchLabels:
      app: prediction
  template:
    metadata:
      labels:
        app: prediction
    spec:
      containers:
      - name: predict
        image: groceryspend/predict:local
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "256Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: prediction-svc
  namespace: app
spec:
  selector:
    app: prediction
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
