infrastructure/k8s/groceryspend/server.yml
# One file for deploying the server app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  # run within the app namespace
  name: server
  namespace: app
  labels:
    app: server
spec:
  replicas: 1 # only run one
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: groceryspend/server:local
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: server-svc
  namespace: app
spec:
  selector:
    app: server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
