infrastructure/k8s/groceryspend/ingress.yml
# TODO: v1beta1 deprecated in v1.22+
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: app
  name: ingress-hello-world-svc
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: hello.groceryspend.io
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-world-svc
          servicePort: 80
